syntax = "proto3";

package v1.appserver_permission;
option go_package = "mistapi/src/protos/v1/appserver_permission";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AppserverPermissionService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc ListAppserverUsers(ListAppserverUsersRequest)
      returns (ListAppserverUsersResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// ----- STRUCTURES -----
message AppserverPermission {
  string id = 1;
  string appuser_id = 2;
  string appserver_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ----- REQUEST/RESPONSE -----
message CreateRequest {
  string appserver_id = 1;
  string appuser_id = 2;
}
message CreateResponse {}

message ListAppserverUsersRequest { string appserver_id = 1; }
message ListAppserverUsersResponse {
  repeated AppserverPermission appserver_permissions = 1;
}

message DeleteRequest { string id = 1; }
message DeleteResponse {}
